--- a/ios/Runner/Next.storyboard
+++ b/ios/Runner/Next.storyboard
@@ -18,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rQA-J2-dmx">
-                                <rect key="frame" x="0.0" y="34" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rQA-J2-dmx">
+                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                                 <items>
                                     <navigationItem title="Title" id="EyA-KC-wHm">
                                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="oOV-hB-GoA">
@@ -31,17 +30,29 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Storyboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4M-Pq-KeP">
-                                <rect key="frame" x="164" y="358" width="86" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storyboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4M-Pq-KeP">
+                                <rect key="frame" x="164" y="358" width="86" height="20.333333333333314"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="86" id="ti6-vX-YQV"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rQA-J2-dmx" firstAttribute="leading" secondItem="Hbh-Mw-dR0" secondAttribute="leading" id="4Y5-RE-QGp"/>
+                            <constraint firstItem="rQA-J2-dmx" firstAttribute="trailing" secondItem="Hbh-Mw-dR0" secondAttribute="trailing" id="AxP-w4-efA"/>
+                            <constraint firstItem="v4M-Pq-KeP" firstAttribute="centerY" secondItem="nDx-E0-Fc3" secondAttribute="centerY" id="nc3-gt-kmD"/>
+                            <constraint firstItem="v4M-Pq-KeP" firstAttribute="centerX" secondItem="nDx-E0-Fc3" secondAttribute="centerX" id="qLY-SL-FBk"/>
+                            <constraint firstItem="rQA-J2-dmx" firstAttribute="top" secondItem="Hbh-Mw-dR0" secondAttribute="top" id="vtR-E6-cdu"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Hbh-Mw-dR0"/>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="v4M-Pq-KeP" id="hjp-M2-Rqx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U6I-X5-zGM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
